Decouple common telemetry helpers from Minecraft types